# Android_Apps_Market_Study

./: .gitignore  README.md  main.py  manual_testing.py  pyproject.toml  requirements.txt
data_func/: apps_data_stat.py  apps_data_vis.py  reviews_data_stat.py  reviews_data_vis.py
utils/: apps_data_stat.py  apps_data_vis.py  main.py  reviews_data_stat.py  reviews_data_vis.py
