[tool.poetry]
name = "pandasandroidmarket"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "0.12.2"
colorama = "0.4.6"
contourpy = "1.0.7"
cycler = "0.11.0"
fonttools = "4.39.3"
iniconfig = "2.0.0"
kiwisolver = "1.4.4"
matplotlib = "3.7.1"
numpy = "1.24.2"
packaging = "23.1"
pandas = "2.0.0"
pillow = "9.5.0"
pluggy = "1.0.0"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
pytz = "2023.3"
six = "1.16.0"
tzdata = "2023.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
